--- a/src/etools/applications/field_monitoring/data_collection/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/data_collection/locale/ar/LC_MESSAGES/django.po
@@ -22,20 +22,11 @@ msgstr ""
 msgid "Activity"
 msgstr "نشاط"
 
-msgid "Question"
-msgstr "سؤال"
+msgid "Activity Overall Finding"
+msgstr "إجمالي نتيجة النشاط"
 
-msgid "Question Text"
-msgstr "نص السؤال"
-
-msgid "Count as HACT"
-msgstr "عد على أنها HACT"
-
-msgid "Specific Details To Probe"
-msgstr "تفاصيل محددة للتحقيق"
-
-msgid "Enabled"
-msgstr "ممكن"
+msgid "Activity Overall Findings"
+msgstr "إجمالي نتيجة النشاط"
 
 msgid "Activity Question"
 msgstr "سؤال النشاط"
@@ -43,94 +34,98 @@ msgstr "سؤال النشاط"
 msgid "Activity Questions"
 msgstr "أسئلة النشاط"
 
-msgid "Methods"
-msgstr "أساليب"
-
-msgid "Information Source"
-msgstr "مصدر المعلومات"
+msgid "Attachments"
+msgstr "مرفقات"
 
 msgid "Author"
-msgstr "مؤلف"
-
-msgid "Started Checklist"
-msgstr "بدأت قائمة التحقق"
-
-msgid "Started Checklists"
-msgstr "بدأت قوائم المراجعة"
+msgstr "المؤلف"
 
 msgid "Checklist"
-msgstr "قائمة تدقيق"
-
-msgid "Value"
-msgstr "قيمة"
+msgstr "قائمة التحقق"
 
 msgid "Checklist Finding"
-msgstr "البحث عن قائمة التحقق"
+msgstr "نتيجة البحث في قائمة التحقق"
 
 msgid "Checklist Findings"
-msgstr "نتائج قائمة التحقق"
-
-msgid "Overall Activity Question Finding"
-msgstr "إجمالي نشاط البحث عن الأسئلة"
-
-msgid "Overall Activity Question Findings"
-msgstr "نتائج أسئلة النشاط العام"
-
-msgid "Narrative Finding"
-msgstr "اكتشاف السرد"
-
-msgid "Attachments"
-msgstr "المرفقات"
+msgstr "نتائج البحث في قائمة التحقق"
 
 msgid "Checklist Overall Finding"
-msgstr "قائمة التحقق الشاملة"
+msgstr "إجمالي نتيجة البحث في قائمة التحقق"
 
 msgid "Checklist Overall Findings"
-msgstr "النتائج العامة قائمة التحقق"
+msgstr "النتائج العامة لقائمة التحقق"
 
-msgid "Activity Overall Finding"
-msgstr "الاكتشاف العام للنشاط"
+msgid "Count as HACT"
+msgstr "HACT تحسب نحو"
 
-msgid "Activity Overall Findings"
-msgstr "النتائج العامة للنشاط"
+msgid "Document Type"
+msgstr "نوع المستند"
 
-msgid "Source of Information"
-msgstr "مصدر المعلومات"
-
-msgid "Overall Finding"
-msgstr "النتيجة الشاملة"
-
-#, python-format
-msgid "Unable to find %(level)s with id %(target_id)s"
-msgstr "تعذر العثور على %(level)s بالمعرف %(target_id)s"
-
-#, python-format
-msgid ""
-"Unable to find finding for question %(question_id)s for %(level)s "
-"%(target_id)s"
-msgstr "تعذر العثور على السؤا %(question_id)s لـ %(level)s %(target_id)s"
+msgid "Enabled"
+msgstr "مُمَكَّن"
 
 msgid "Ensure this field has no more than 100 characters."
 msgstr "تأكد من أن هذا الحقل لا يحتوي على أكثر من 100 حرف."
 
-msgid "Document Type"
-msgstr "نوع الوثيقة"
+msgid "Information Source"
+msgstr "مصدر المعلومات"
 
 msgid "Information source is required"
-msgstr "مطلوب مصدر المعلومات"
+msgstr "مصدر المعلومات مطلوب"
+
+msgid "Methods"
+msgstr "طرق"
+
+msgid "Narrative Finding"
+msgstr "النتائج الوصفية"
+
+msgid "Overall Activity Question Finding"
+msgstr "إجمالي نتيجة سؤال النشاط"
+
+msgid "Overall Activity Question Findings"
+msgstr "إجمالي أنشطة البحث عن الأسئلة"
+
+msgid "Overall Finding"
+msgstr "النتيجة الإجمالية"
+
+msgid "Question"
+msgstr "سؤال"
+
+msgid "Question Text"
+msgstr "نص السؤال"
+
+msgid "Report Attachments"
+msgstr "مرفقات التقرير"
+
+msgid "Source of Information"
+msgstr "مصدر المعلومات"
+
+msgid "Specific Details To Probe"
+msgstr "تفاصيل محددة للتحقق"
+
+msgid "Started Checklist"
+msgstr "قائمة التحقق التي تم البدء فيها"
+
+msgid "Started Checklists"
+msgstr "قوائم التحقق التي تم البدء بها"
+
+msgid "Unable to fill checklists for current activity"
+msgstr "غير قادر على ملء قوائم التحقق للنشاط الحالي"
+
+#, python-format
+msgid "Unable to find %(level)s with id %(target_id)s"
+msgstr "غير قادر على البحث %(level)s باستخدام المعرف %(target_id)s"
+
+#, python-format
+msgid "Unable to find finding for question %(question_id)s for %(level)s %(target_id)s"
+msgstr "غير قادر على العثور على نتيجة ل سؤال %(question_id)s لـ %(level)s %(target_id)s"
+
+msgid "User is required"
+msgstr "مراقب الميدان الأساسي مطلوب"
+
+msgid "Value"
+msgstr "القيمة"
 
 #, python-format
 msgid "Workspace code provided is not a valid business_area_code: %s"
-msgstr "رمز مساحة العمل الذي تم توفيره ليس رمز منطقة_عمل صالحًا :%s"
-
-msgid "Workspace is required"
-msgstr "مساحة العمل مطلوبة"
-
-msgid "User is required"
-msgstr "المستخدم مطلوب"
-
-msgid "Unable to fill checklists for current activity"
-msgstr "غير قادر على ملء قوائم المراجعة للنشاط الحالي"
-
-msgid "Report Attachments"
-msgstr "تقرير المرفقات"
+msgstr "رمز مساحة العمل المقدم ليس رمز business_area_code صالحًا: %s"
