--- a/src/etools/applications/field_monitoring/fm_settings/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/fm_settings/locale/ar/LC_MESSAGES/django.po
@@ -19,197 +19,197 @@ msgstr ""
 "Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
 "&& n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;\n"
 
-msgid "Methods"
-msgstr "أساليب"
-
-msgid "Site ID"
-msgstr "معرف الموقع"
+msgid "Active"
+msgstr "فعال"
 
 #, python-format
 msgid "Admin %s - Name"
-msgstr "المسؤول %s - الاسم"
-
-#, python-format
-msgid "Admin %s - Type"
-msgstr "المسؤول %s - النوع"
+msgstr "مدير النظام %s - الاسم"
 
 #, python-format
 msgid "Admin %s - Pcode"
-msgstr "المسؤول %s - Pcode"
+msgstr "المشرف %s - Pcode"
 
-msgid "Site"
-msgstr "موقع"
+#, python-format
+msgid "Admin %s - Type"
+msgstr "مدير النظام %s - النوع"
 
-msgid "Lat"
-msgstr "لات"
+msgid "Answer Type"
+msgstr "نوع الإجابة"
 
-msgid "Long"
-msgstr "طويل"
-
-msgid "Active"
-msgstr "نشيط"
-
-msgid "Related To"
-msgstr "متعلق ب"
-
-msgid "Name"
-msgstr "اسم"
-
-msgid "Issue for Attention"
-msgstr "قضية للانتباه"
-
-msgid "Status"
-msgstr "حالة"
+msgid "Ask for information source in checklist?"
+msgstr "اسأل عن مصدر المعلومات في قائمة التحقق؟"
 
 msgid "Attachments"
 msgstr "المرفقات"
+
+msgid "Boolean"
+msgstr "المتغيرات المنطقية"
+
+msgid "CP Output"
+msgstr "CP مخرجات"
+
+msgid "Category"
+msgstr "الفئة"
+
+msgid "Choices Size"
+msgstr "حجم الاختيارات"
+
+msgid "Count as HACT"
+msgstr "HACTتحسب نحو"
 
 msgid "Global Attachments"
 msgstr "المرفقات العالمية"
 
 msgid "Global Config"
-msgstr "التكوين العام"
+msgstr "الإعداد العالمي"
 
 msgid "Global Configs"
-msgstr "التكوينات العالمية"
+msgstr "الإعدادات العالمية"
 
-msgid "Short Name"
-msgstr "اسم قصير"
+msgid "HACT questions can only be related at the Partner Organization Level"
+msgstr "يمكن أن تكون أسئلة HACT ذات صلة فقط على مستوى المنظمة الشريكة"
 
-msgid "Ask for information source in checklist?"
-msgstr "اسأل عن مصدر المعلومات في قائمة التحقق؟"
+msgid "Inactive"
+msgstr "غير فعال"
 
-msgid "Method"
-msgstr "طريقة"
+msgid "Is Active"
+msgstr "فعال"
 
-msgid "Question Category"
-msgstr "فئة السؤال"
+msgid "Is Custom"
+msgstr "مخصص"
 
-msgid "Questions Categories"
-msgstr "فئات الأسئلة"
+msgid "Issue Closed By"
+msgstr "تم إغلاق المسألة من قبل"
 
-msgid "Text"
-msgstr "نص"
+msgid "Issue For Attention/Probing"
+msgstr "مسألة للتنبيه/ للفحص"
 
-msgid "Number"
-msgstr "عدد"
+msgid "Issue Raised By"
+msgstr "طرحت المسألة من قبل"
 
-msgid "Boolean"
-msgstr "قيمة منطقية"
+msgid "Issue Related To"
+msgstr "مسألة تتصل بـ"
+
+msgid "Issue for Attention"
+msgstr "مسألة تستدعي الانتباه"
+
+msgid "Label"
+msgstr "بطاقة"
+
+msgid "Lat"
+msgstr "لات"
+
+msgid "Level"
+msgstr "المستوى"
 
 msgid "Likert Scale"
 msgstr "مقياس ليكرت"
 
-msgid "Partner"
-msgstr "شريك"
+msgid "Location"
+msgstr "الموقع"
+
+msgid "Location/Site"
+msgstr "الموقع /مكان"
+
+msgid "Location Site"
+msgstr "مكان الموقع"
+
+msgid "Location Sites"
+msgstr "أماكن المواقع"
+
+msgid "Log Issue"
+msgstr "سجل المشكلة"
+
+msgid "Log Issues"
+msgstr "سجل المشكلات"
+
+msgid "Long"
+msgstr "طويل"
+
+msgid "Maximum one related object should be provided"
+msgstr "ينبغي توفير كائن واحد ذو صلة كحد أقصى"
+
+msgid "Method"
+msgstr "طريقة"
+
+msgid "Methods"
+msgstr "طرق"
+
+msgid "Name"
+msgstr "الاسم"
+
+msgid "Number"
+msgstr "الرقم"
+
+msgid "Only one hact question can be active at any time."
+msgstr "يمكن تفعيل سؤال HACT واحد فقط في أي وقت."
+
+msgid "Option"
+msgstr "الخيار"
 
 msgid "Output"
-msgstr "انتاج |"
+msgstr "المخرجات"
 
 msgid "PD/SPD"
 msgstr "PD/SPD"
 
-msgid "Answer Type"
-msgstr "نوع الإجابة"
+msgid "P Code"
+msgstr "كود P"
 
-msgid "Choices Size"
-msgstr "حجم الاختيارات"
+msgid "Parent Location"
+msgstr "الموقع الرئيسي"
 
-msgid "Level"
-msgstr "مستوى"
+msgid "Partner"
+msgstr "الشريك"
 
-msgid "Category"
-msgstr "فئة"
+msgid "Point"
+msgstr "النقطة"
 
-msgid "Sections"
-msgstr "الأقسام"
+msgid "Question"
+msgstr "السؤال"
+
+msgid "Question Category"
+msgstr "فئة السؤال"
 
 msgid "Question Text"
 msgstr "نص السؤال"
 
-msgid "Count as HACT"
-msgstr "عد على أنها HACT"
-
-msgid "Is Custom"
-msgstr "هو العرف"
-
-msgid "Is Active"
-msgstr "نشط"
-
-msgid "Question"
-msgstr "سؤال"
-
 msgid "Questions"
-msgstr "أسئلة"
+msgstr "الأسئلة"
 
-msgid "Label"
-msgstr "مُلصَق"
+msgid "Questions Categories"
+msgstr "فئات الأسئلة"
 
-msgid "Value"
-msgstr "قيمة"
-
-msgid "Option"
-msgstr "خيار"
-
-msgid "Parent Location"
-msgstr "موقع الوالد"
-
-msgid "P Code"
-msgstr ""
-
-msgid "Point"
-msgstr "نقطة"
-
-msgid "Location Site"
-msgstr "موقع الموقع"
-
-msgid "Location Sites"
-msgstr "مواقع الموقع"
-
-msgid "CP Output"
-msgstr "خرج CP"
-
-msgid "Location/Site"
-msgstr "الموقع / الموقع"
-
-msgid "Issue Raised By"
-msgstr "قضية أثارها"
-
-msgid "Location"
-msgstr "موقع"
-
-msgid "Issue For Attention/Probing"
-msgstr "قضية للاهتمام / التحقيق"
-
-msgid "Log Issue"
-msgstr "مشكلة في السجل"
-
-msgid "Log Issues"
-msgstr "قضايا السجل"
+msgid "Related To"
+msgstr "ذو الصلة بـ"
 
 msgid "Related object not provided"
 msgstr "لم يتم توفير الكائن ذي الصلة"
 
-msgid "Maximum one related object should be provided"
-msgstr "يجب توفير كائن واحد مرتبط كحد أقصى"
+msgid "Sections"
+msgstr "الأقسام"
 
-msgid "HACT questions can only be related at the Partner Organization Level"
-msgstr "لا يمكن ربط أسئلة HACT إلا على مستوى المؤسسة الشريكة"
+msgid "Short Name"
+msgstr "الاسم المختصر"
 
-msgid "Only one hact question can be active at any time."
-msgstr "يمكن أن يكون سؤال hact واحد فقط نشطًا في أي وقت."
+msgid "Site"
+msgstr "المكان"
 
-msgid "The system provided questions cannot be edited."
-msgstr "لا يمكن تحرير الأسئلة المقدمة من النظام."
-
-msgid "Inactive"
-msgstr "غير نشط"
-
-msgid "Issue Closed By"
-msgstr "تم إغلاق الإصدار من قبل"
-
-msgid "Issue Related To"
-msgstr "قضية متعلقة ب"
+msgid "Site ID"
+msgstr "معرف المكان"
 
 msgid "Site Specific Locations"
-msgstr "مواقع محددة الموقع"
+msgstr "مكان المواقع المحددة"
+
+msgid "Status"
+msgstr "الحالة"
+
+msgid "Text"
+msgstr "النص"
+
+msgid "The system provided questions cannot be edited."
+msgstr "لا يمكن تحرير الأسئلة التي يوفرها النظام."
+
+msgid "Value"
+msgstr "القيمة"
